Thu Feb 29 12:00:30 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (get_object_extension): Don't allow
	@CONFIG_INCLUDE_SPEC@ in the Makefile.in when config.h not used.
	From Gord Matzigkeit.  Test confincl.test.

	* texinfos.am (install-info): Changed usage of install-info (in
	comment).  Per Feb 25 GNU Standards document.

Wed Feb 28 08:40:55 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (handle_tests): New function.
	(generate_makefile): Call it.
	(handle_subdirs): Skip directories whose names look like configure
	substitutions.
	(handle_subdirs): Require intl and po, not @INTLSUB@ and @POSUB@,
	when using gettext.
	(scan_configure): Clear in_ac_output if "]" found.  Test
	acoutqnl.test.
	(require_config_file): New function.
	(generate_makefile): Use require_config_file.
	(config_aux_path): New variable.
	(scan_configure): Check for AC_CONFIG_AUX_DIR.
	(handle_merge_targets): Add install-strip rule.

Tue Feb 27 12:00:36 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* mdate-sh: New version from Ulrich Drepper.

	* automake.in (handle_source_transform): Changed fill back to
	empty string.
	(handle_libraries): Ditto.
	(handle_dist): Ditto.
	(handle_dependencies): Ditto.
	(handle_footer): Ditto.
	(handle_phony): Ditto.

	* Makefile.am (DIST_SUBDIRS): Removed.
	(installcheck-local): Use Perl, not test -x.
	(PERL): New macro.
	(maintainer-check): Use $(PERL), not @PERL@.

	* configure.in (VERSION): Upped to 0.31.

Sat Feb 24 15:02:19 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (scan_configure): AC_CHECK_TOOL requires config.sub
	and config.guess.

	* automake.in: Use keyed_aclocal_warning when warning about
	fp_PROG_INSTALL.
	(get_object_extension): Use keyed_aclocal_warning when warning
	about fp_C_PROTOTYPES.
	(keyed_aclocal_warning): New function.

	* Makefile.am (pkgdata_DATA): Install aclocal.m4.
	* aclocal.m4: Include fp_C_PROTOTYPES, fp_PROG_CC_STDC.

	* automake.in (get_object_extension): Only give error about