@@ -1,7 +1,6 @@
 Priorities for release:
 * Check all require_file errors to see if any should reference a line in
   Makefile.am or configure.in.  [handle_configure does]
-* test gettext stuff for po/intl?
 * handle AC_CONFIG_AUX_DIR; must include install-sh
   what about mkinstalldirs, mdate-sh?
 
