@@ -324,7 +324,15 @@ variable names; thus one writes @samp{bin_PROGRAMS} and not
 @samp{bindir_PROGRAMS}.
 
 Not every sort of object can be installed in every directory.  Automake
-will flag those attempts it finds in error.
+will flag those attempts it finds in error.  Automake will also diagnose
+obvious misspellings in directory names.
+
+Sometimes the standard directories -- even as augmented by Automake --
+are not enough.  In particular it is sometimes useful, for clarity, to
+install objects in a subdirectory of some predefined directory.  To this
+end, Automake allows you to extend the list of possible installation
+directories.  A given prefix (eg @samp{zar}) is valid if a variable of
+the same name with @samp{dir} appended is defined (eg @samp{zardir}).
 
 The special prefix @samp{noinst} indicates that the objects in question
 should not be installed at all.
