@@ -6,6 +6,6 @@ AUTOMAKE_OPTIONS = gnits
 ## Perhaps he is right.
 TESTS = mdate.test vtexi.test acoutput.test instexec.test checkall.test \
 acoutnoq.test acouttbs.test libobj.test proginst.test acoutqnl.test \
-confincl.test
+confincl.test spelling.test prefix.test
 
 DIST_OTHER = defs
