@@ -1,3 +1,3 @@
-@set UPDATED 28 February 1996
+@set UPDATED 29 February 1996
 @set EDITION 0.31
 @set VERSION 0.31
