@@ -1,6 +1,10 @@
 Thu Feb 29 20:23:42 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
+	More tests:
+	* prefix.test: New file.
+	* spelling.test: New file
 	* confincl.test: New file.
+	* Makefile.am (TESTS): Updated.
 
 Wed Feb 28 11:57:02 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
