@@ -1,5 +1,8 @@
 Thu Feb 29 12:00:30 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
+	* automake.in (am_install_var): Allow extended range of
+	installation directories.
+
 	* automake.in (get_object_extension): Don't allow
 	@CONFIG_INCLUDE_SPEC@ in the Makefile.in when config.h not used.
 	From Gord Matzigkeit.  Test confincl.test.
